apps/ingress/overlays/staging/bff.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff
spec:
  externalName: application.app-staging-bff.svc.cluster.local
