apps/ingress/overlays/staging/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  externalName: application.app-staging-frontend.svc.cluster.local
