apps/ingress/overlays/staging/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  annotations:
    cloud.google.com/backend-config: '{"ports": {"4000":"backend-config-bff"}}'
