apps/ingress/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: application
  annotations:
    kubernetes.io/ingress.global-static-ip-name: web-app-staging-ip
